--- a/src/base.css
+++ b/src/base.css
@@ -1,13 +1,6 @@
 body {
-  background: #eee;
-  font-family: Georgia;
+  background-color: #E75640;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 50px;
-}
-
-.big-lorem-ipsum {
-  font-size: 50px;
-  font-weight: 300;
-  margin: 0 auto;
-  max-width: 15em;
 }
