--- a/css/Search.css
+++ b/css/Search.css
@@ -1,26 +1,8 @@
-.app {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    max-width: 940px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.app__header {
-    color: #E75640;
-    font-size: 80px;
-    font-weight: 100;
-    height: 80px;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.app__search {
+.search {
     margin-bottom: 30px;
 }
 
-.app__searchInput {
+.search__input {
     font-size: 16px;
     line-height: 20px;
     font-weight: 600;
@@ -32,7 +14,7 @@
     margin-right: 10px;
 }
 
-.app__submitButton {
+.search__submitButton {
     font-family: 'Roboto', sans-serif;
     background: #E75640;
     color: white;
