--- a/css/Header.css
+++ b/css/Header.css
@@ -1,10 +1,10 @@
 .header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
-.header__savedButton {
+.header__nav {
     font-size: 25px;
     font-weight: 100;
-    padding: 20px 30px 20px 0;
+    margin: 20px 0 20px 0;
 }
