--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,9 @@
 body {
   font-family: 'Roboto', sans-serif;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 1480px;
+  margin-right: auto;
+  margin-left: auto;
 }
