--- a/css/Saved.css
+++ b/css/Saved.css
@@ -1,3 +1,8 @@
+.saved {
+    display: flex;
+    flex-direction: column;
+}
+
 .saved__title {
     color: #E75640;
     font-size: 80px;
@@ -6,4 +11,8 @@
     margin-top: 30px;
     margin-bottom: 50px;
     text-align: center;
+}
+
+.saved__noSavedGems {
+    font-size: 30px;
 }
